# lanchain_chat_app

./: .gitignore  README.md  alembic.ini  chat_engine.py  conversations_manager_ops.py  db.py  history.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2f120675e312_add_provider_and_model_name_to_.py
frontend/lanchain_chat_app_vanillajs/: index.html
src/api/: conversations.py  messages.py
src/api/schemas/: conversations.py  messages.py
src/core/: chat_engine.py  conversation_service.py  llm_adapters.py  message_service.py
src/db/: models.py  session.py
